share/revng/test/tests/invalidation/four-functions.S.remove-preserved-register-to-called.filecheck
#
# This file is distributed under the MIT License. See LICENSE.md for details.
#

---
Changes:
  - Path:            "/Types/2001-RawFunctionType/PreservedRegisters"
    Remove:          rax_x86_64
...

# CHECK: 0x500000:Code_x86_64:isolated
